--- a/style.css
+++ b/style.css
@@ -14,6 +14,12 @@ body {
   color: #22d4fd;
 }
 .apresentacao {
+  margin: 10%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+
+.apresentacao img {
+  width: 270px;
 }
